syntax = "proto3";

package proposal_event_message;

service NewProposalEventService {
    rpc ValidateNewProposalEvent(NewProposalEvent) 
    returns (ValidateProposalEventResponse);
}

message NewProposalEvent {
    string topic = 1;
    uint32 duration = 2;
}

message ValidateProposalEventResponse {
    bool success = 1;
    string message = 2;
}